<resources>
    <!--String-->
    <string name="app_name">Flying Beauties</string>
    <string name="bt_Login">Login</string>
    <string name="bt_Register">Register</string>
    <string name="et_User">Username</string>
    <string name="et_FullName">Fullname</string>
    <string name="et_Email">Email</string>
    <string name="et_City">City</string>
    <string name="et_Country">Country</string>
    <string name="et_Pass">Password</string>
    <string name="bt_next">Next</string>
    <string name="string_Register">Register</string>


    <!--Activity-->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!--Tab user-->
    <string name="account">Account</string>
    <string name="my_competition">My Competition</string>
    <string name="rating">Rating</string>
    <string name="total_picture">Picture</string>
    <string name="total_point">Point</string>
    <string name="upload_images">Upload Images</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>
