<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
    android:background="@android:color/transparent"
tools:context=".activity.LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:background="#b9ffffff"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Register"
        android:textSize="40sp"
        android:id="@+id/textView"
        android:layout_gravity="right" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_card_membership_black_24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_FullName"
            android:layout_weight="1"
            android:id="@+id/etFullName"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"

            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_perm_identity_black_24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_User"
            android:layout_weight="1"
            android:id="@+id/etUser"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"

            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_email_black_24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_Email"
            android:layout_weight="1"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"

            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_vpn_key_black_24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_Pass"
            android:layout_weight="1"
            android:id="@+id/etPass"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"

            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_flag_black_24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_Country"
            android:layout_weight="1"
            android:id="@+id/etCountry"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"

            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_location_city_black_24dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_City"
            android:layout_weight="1"
            android:id="@+id/etCity"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"

            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:gravity="right"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"

        >

        <Button
            android:layout_width="@dimen/bt_login_width"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_button"
            android:text="@string/bt_next"
            android:id="@+id/btNext" />
    </LinearLayout>
</LinearLayout>

</LinearLayout>
