<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="datviet.FlyBeau.activity.UserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e9eff4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/background_layout_user"
                android:id="@+id/layout_user">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/imageView6"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="User Name"
                            android:id="@+id/tv_user"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sub user"
                            android:id="@+id/tv_sub_user"
                            android:textColor="@color/colorPrimary" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:background="@drawable/background_layout_user">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:id="@+id/textView2"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_rating"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/selectableItemBackground" >


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_rating"
                        android:id="@+id/imageView7"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:id="@+id/textView3"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="center_vertical"
                        android:textSize="18dp"
                        android:layout_marginLeft="15dp" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/material_grey_300"
                    android:layout_margin="5dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_total_picture"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_picture"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_picture"
                        android:id="@+id/tv_total_picture"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="center_vertical"
                        android:textSize="18dp"
                        android:layout_marginLeft="15dp" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/material_grey_300"
                    android:layout_margin="5dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_total_point"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_point"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_point"
                        android:id="@+id/tv_total_point"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="center_vertical"
                        android:textSize="18dp"
                        android:layout_marginLeft="15dp" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/material_grey_300"
                    android:layout_margin="5dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_upload_images"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_upload"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload_images"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="center_vertical"
                        android:textSize="18dp"
                        android:layout_marginLeft="15dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:background="@drawable/background_layout_user">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_competition"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_margin="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView"
                        android:layout_marginLeft="20dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:background="@drawable/background_layout_user">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_setting"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_setting"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_settings"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="center_vertical"
                        android:textSize="18dp"
                        android:layout_marginLeft="15dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
